--- a/we-chrome/we-popup-js/popup.html
+++ b/we-chrome/we-popup-js/popup.html
@@ -4,5 +4,5 @@
 	<h1>bonjour, je suis la popup</h1>
 	<p>du texte</p>
 	<button>cliquer ici</button>
-<script src='action.js'></script>
+<script src='popup.js'></script>
 </body></html>
