--- a/model-css/index.html
+++ b/model-css/index.html
@@ -5,6 +5,7 @@
 	<link rel='icon' type='image/x-icon' href='file:///C:/wamp64/www/site-dp/data/nounours-perso.svg'/>
 	<link rel='stylesheet' type='text/css' href='file:///C:/wamp64/www/site-dp/library-css/structure.css'/>
 	<link rel='stylesheet' type='text/css' href='file:///C:/wamp64/www/site-dp/library-css/perso.css' media='screen'/>
+	<link rel='stylesheet' type='text/css' href='file:///C:/wamp64/www/site-dp/library-css/shapes.css'/>
 	<link rel='stylesheet' type='text/css' href='base.css'/>
 	<!-- base target='_blank' href='../../site-perso/'/ -->
 	<script type='text/javascript' src='file:///C:/wamp64/www/site-dp/library-js-ext/angular.js'></script>
