--- a/model-css/page-grid.html
+++ b/model-css/page-grid.html
@@ -12,7 +12,11 @@
 <section>
 	<h2>grid</h2>
 	<div><p></p><p></p><p></p><p></p><p></p><p></p></div>
-	<p>display: grid; grid-template-columns: 1fr 50% 1fr; trois colonnes. également grid-template-rows. 1fr représente une fraction de l'espace restant.</p>
+	<xmp>div {
+	display: grid;
+	grid-template-columns: 1fr 50% 1fr;
+}</xmp>
+	<p>trois colonnes. également grid-template-rows. 1fr représente une fraction de l'espace restant.</p>
 	<div style='grid-gap:1em 1em'><p></p><p></p><p></p><p></p><p></p><p></p></div>
 	<p>grid-gap: 1em 1em; grid-row-gap + grid-column-gap</p>
 	<div style='justify-items:end'><p></p><p></p><p></p><p></p><p></p><p></p></div>
