--- a/model-css/page-query.html
+++ b/model-css/page-query.html
@@ -12,10 +12,10 @@
 </style><section>
 	<h2>les media queries</h2>
 	<p>l'impression</p>
-	<p>@media print {</p>
-	<p>body { color: red; }</p>
-	<p>p { color: blue; }</p>
-	<p>}</p>
+	<xmp>@media print {
+	body { color: red; }
+	p { color: blue; }
+}</xmp>
 	<p>affichage pour les tablettes</p>
 	<p>@media (max-width: 992px){}</p>
 	<p>affichage pour les smartphones</p>
