--- a/model-css/page-back.html
+++ b/model-css/page-back.html
@@ -14,8 +14,10 @@
 	<h3>les dégradés</h3>
 	<a href='https://developer.mozilla.org/fr/docs/Web/CSS/Utilisation_de_dégradés_CSS'>plus d'infos</a>
 	<p style='background:linear-gradient(45deg, deeppink, orange, deeppink)'>background: linear-gradient(45deg, deeppink, orange, deeppink);</p>
-	<p style='background:linear-gradient(45deg, deeppink, 10%, orange, 90%, deeppink)'>background: linear-gradient(45deg, deeppink, 10%, orange, 90%, deeppink); emplacement de la couleur médiane</p>
-	<p style='background:linear-gradient(45deg, deeppink 10%, orange 90%, deeppink)'>background: linear-gradient(45deg, deeppink 10%, orange 90%, deeppink); centre de la couleur</p>
+	<p style='background:linear-gradient(45deg, deeppink, 10%, orange, 90%, deeppink)'>background: linear-gradient(45deg, deeppink, 10%, orange, 90%, deeppink);
+		<br>emplacement de la couleur médiane</p>
+	<p style='background:linear-gradient(45deg, deeppink 10%, orange 90%, deeppink)'>background: linear-gradient(45deg, deeppink 10%, orange 90%, deeppink);
+		<br>centre de la couleur</p>
 	<p style='background:linear-gradient(45deg, deeppink 30%, orange 30%, deeppink)'>background: linear-gradient(45deg, deeppink 30%, orange 30%, deeppink);</p>
 	<p style='background:repeating-linear-gradient(45deg, deeppink, orange)'>background: repeating-linear-gradient(45deg, deeppink, orange, deeppink);</p>
 	<p style='background:radial-gradient(deeppink, orange, deeppink)'>background: radial-gradient(deeppink, orange, deeppink);</p>
@@ -24,12 +26,12 @@
 	<p style='background: linear-gradient(0deg,rgba(255,150,150,0.8),rgba(200,150,150,0)), linear-gradient(120deg,rgba(150,255,150,0.8),rgba(150,255,150,0)), linear-gradient(240deg,rgba(150,150,255,0.8),rgba(150,150,255,0));'>trois gradients semi-transparents superposés</p>
 	<h3>les images</h3>
 	<p class='img'>background-image: url('...'); pas d'espace entre url et (</p>
-	<p class='img' style='background-repeat:no-repeat'>background-image: url(...); background-repeat:no-repeat;</p>
-	<p class='img' style='background-repeat:repeat'>background-image: url(...); background-repeat:repeat;</p>
-	<p class='img' style='background-repeat:repeat-x'>background-image: url(...); background-repeat:repeat-x;</p>
-	<p class='img' style='background-repeat:repeat-y'>background-image: url(...); background-repeat:repeat-y;</p>
-	<p class='img' style='background-size:cover'>background-image: url(...); background-size: cover;</p>
-	<p class='img' style='background-size:contain'>background-image: url(...); background-size: contain;</p>
+	<p class='img' style='background-repeat:no-repeat'>background-image: url(...);<br>background-repeat: no-repeat;</p>
+	<p class='img' style='background-repeat:repeat'>background-image: url(...);<br>background-repeat: repeat;</p>
+	<p class='img' style='background-repeat:repeat-x'>background-image: url(...);<br>background-repeat: repeat-x;</p>
+	<p class='img' style='background-repeat:repeat-y'>background-image: url(...);<br>background-repeat: repeat-y;</p>
+	<p class='img' style='background-size:cover'>background-image: url(...);<br>background-size: cover;</p>
+	<p class='img' style='background-size:contain'>background-image: url(...);<br>background-size: contain;</p>
 	<p class='svg'>background-image: url("data:image/svg+xml;utf8,< svg >...< /svg>")</p>
 	<p class='info'>les variables css ne sont pas prises en compte, ainsi que les valeurs d'un css externe.</p>
 </section>
