--- a/model-css/page-bord.html
+++ b/model-css/page-bord.html
@@ -5,7 +5,12 @@
 	}
 </style><section class='bord list3'>
 	<h2>les bordures</h2>
-	<p>border-color: #0CC; border-width: 4px; border-style: solid;</p>
+	<p></p>
+	<xmp>p {
+	border-color: #0CC;
+	border-width: 4px;
+	border-style: solid;
+}</xmp>
 	<p style='border-style:none'>border-style: none;</p>
 	<p style='border-style:dashed'>border-style: dashed;</p>
 	<p style='border-style:dotted'>border-style: dotted;</p>
