--- a/model-css/page-image.html
+++ b/model-css/page-image.html
@@ -23,7 +23,7 @@
 }</xmp>
 	<p>ajuster l'image à son cadre, en gardant ses proportions. elle est rognée si elle dépasse de son cadre.</p>
 	<a href='http://www.deborah-powers.fr/'>lien</a>
-	<p>l'attribut href est obligatoire, même s'il est vide. # permet de désactiver la redirection.</p>
+	<p>l'attribut href est obligatoire, même s'il est vide.</p>
 	<xmp><base target='_blank' href='C:/Users/deborah.powers/Desktop/articles/'/></xmp>
 	<p>base pré-écrit des infos pour les liens et les images. on le met dans le head.</p>
 	<p>valeurs de href: # désactiver le lien, #id un élément de la page qui a pour id id, http://www.truc.fr/ une page web, c://truc/machin.html un fichier (ou un dossier) local.</p>
