--- a/model-angularjs/angularjs-service.html
+++ b/model-angularjs/angularjs-service.html
@@ -4,10 +4,10 @@
 	<meta charset='utf-8'/>
 	<base target='_blank'>
 	<link rel='icon' type='image/svg+xml' href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' version='1.1' width='16' height='16'><circle cx='8' cy='8' r='6' stroke='#603' fill='#C36' stroke-width='4'/></svg>">
-	<link rel='stylesheet' type='text/css' href='/home/lenovo/Bureau/site-dp/library-css/structure.css'/>
-	<link rel='stylesheet' type='text/css' href='/home/lenovo/Bureau/site-dp/library-css/perso.css' media='screen'/>
+	<link rel='stylesheet' type='text/css' href='file:///C:/wamp64/www/site-dp/library-css/structure.css'/>
+	<link rel='stylesheet' type='text/css' href='file:///C:/wamp64/www/site-dp/library-css/perso.css' media='screen'/>
 	<link rel='stylesheet' type='text/css' href='local.css'/>
-	<script type='text/javascript' src='/home/lenovo/Bureau/site-dp/library-js-ext/angular.js'></script>
+	<script type='text/javascript' src='file:///C:/wamp64/www/site-dp/library-js-ext/angular.js'></script>
 <style type='text/css'>
 	section { column-count: 3; }
 	book {
@@ -24,7 +24,7 @@
 	angular.module ('bookApp', []);
 	angular.module ('bookApp').service ('bookJson', function ($http){
 		var jsonName = 'books.json';
-		var listBooks =[]
+		var listBooks =[];
 		return $http.get (jsonName).then (function (response){
 			for (var b in response.data) listBooks.push (response.data[b]);
 			return listBooks;
