--- a/model-css/page-grid.html
+++ b/model-css/page-grid.html
@@ -7,7 +7,10 @@
 		border: solid 4px var(--button-bg);
 		height: 6em;
 	}
-	div p { border: solid 6px var(--button-bg-hover); }
+	div p {
+		border: solid 6px var(--button-bg-hover);
+		margin: 0;
+	}
 </style>
 <section>
 	<h2>grid</h2>
