--- a/bases/base html.html
+++ b/bases/base html.html
@@ -2,7 +2,8 @@
 	<title></title>
 	<meta name='viewport' content='width=device-width,initial-scale=1'/>
 	<meta charset='utf-8'/>
-	<base href='../../site-perso/' target='_blank'>
+	<base target='blank' href='file:///C:/wamp64/www/site-dp/'>
+	<!-- base target='blank' href='../../site-perso/' -->
 	<link rel='icon' type='image/svg+xml' href='exemples/nounours-perso.svg'>
 	<!-- link rel='icon' type='image/svg+xml' href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' version='1.1' width='16' height='16'><circle cx='8' cy='8' r='6' style='fill:#FBD;stroke:#C36'/></svg>" -->
 	<link rel='stylesheet' type='text/css' href='library-css/structure.css'/>
