--- a/exemples/cube.html
+++ b/exemples/cube.html
@@ -9,35 +9,57 @@
 	<link rel='stylesheet' type='text/css' href='library-css/perso.css' media='screen'/>
 	<link rel='stylesheet' type='text/css' href='../html/exemples/cube.css'/>
 <style type='text/css'>
-	div.cube { top: 100px; }
-	div.cube.horizontal { left: 100px; }
-	div.cube.vertical { left: 400px; }
-	div.front {
-		background: linear-gradient(45deg, deeppink 20%, #FACA 20%, #FACA 80%, seagreen 80%);
+	div.cube {
+		top: 100px;
+		left: 400px;
 	}
-	div.back {
-		background: linear-gradient(135deg, orangered 20%, #FACA 20%);
+	div.cube > div {
+		background-color: transparent;
+		border: solid 4px var(--bord-color);
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		font-size: 2em;
 	}
-	div.top {
-		background: linear-gradient(135deg, #FACA 80%, deeppink 80%);
+	div.cube.arlequin > div:nth-child(1) {
+		background:
+			linear-gradient(45deg, deeppink 10%, transparent 30%, transparent 70%, seagreen 90%),
+			linear-gradient(135deg, orange 10%, transparent 30%, transparent 70%, purple 90%);
 	}
-	div.bottom {
-		background: linear-gradient(45deg, deeppink 20%, #FACA 20%);
+	div.cube.arlequin > div:nth-child(2) {
+		background:
+			linear-gradient(45deg, orangered 10%, transparent 30%, transparent 70%, blue 90%),
+			linear-gradient(135deg, magenta 10%, transparent 30%, transparent 70%, grey 90%);
 	}
-	div.left {
-		background: linear-gradient(135deg, #FACA 80%, deeppink 80%);
+	div.cube.arlequin > div:nth-child(3) {
+		background:
+			linear-gradient(45deg, blue 10%, transparent 30%, transparent 70%, seagreen 90%),
+			linear-gradient(135deg, orange 10%, transparent 30%, transparent 70%, magenta 90%);
 	}
-	div.right {
-		background: linear-gradient(45deg, #FACA 80%, deeppink 80%);
+	div.cube.arlequin > div:nth-child(4) {
+		background:
+			linear-gradient(45deg, deeppink 10%, transparent 30%, transparent 70%, orangered 90%),
+			linear-gradient(135deg, grey 10%, transparent 30%, transparent 70%, purple 90%);
 	}
+	div.cube.arlequin > div:nth-child(5) {
+		background:
+			linear-gradient(45deg, grey 10%, transparent 30%, transparent 70%, orange 90%),
+			linear-gradient(135deg, blue 10%, transparent 30%, transparent 70%, deeppink 90%);
+	}
+	div.cube.arlequin > div:nth-child(6) {
+		background:
+			linear-gradient(45deg, purple 10%, transparent 30%, transparent 70%, magenta 90%),
+			linear-gradient(135deg, seagreen 10%, transparent 30%, transparent 70%, orangered 90%);
+	}
+	div.cube.corner > div {
+		background:
+			linear-gradient(45deg, var(--text-color) 10%, transparent 20%, transparent 80%, var(--text-color) 90%),
+			linear-gradient(135deg, var(--text-color) 10%, transparent 20%, transparent 80%, var(--text-color) 90%);
+		}
 </style></head><body>
 	<a href='https://la-cascade.io/creer-un-cube-en-css/'>source: la cascade</a>
 	<div class='perspective'>
-		<div class='cube horizontal'>
-			<div class='front'>devant</div><div class='back'>derrière</div><div class='top'>haut</div>
-			<div class='bottom'>bas</div><div class='left'>gauche</div><div class='right'>droite</div>
-		</div>
-		<div class='cube vertical'>
+		<div class='cube full corner'>
 			<div class='front'>devant</div><div class='back'>derrière</div><div class='top'>haut</div>
 			<div class='bottom'>bas</div><div class='left'>gauche</div><div class='right'>droite</div>
 		</div>
