--- a/model-css/index.html
+++ b/model-css/index.html
@@ -5,20 +5,15 @@
 	<!--
 	<base target='blank' href='../../site-perso/'/>
 	<base target='blank' href='file:///C:/wamp64/www/site-dp/'/>
-	<script type='text/javascript' src='file:///C:/wamp64/www/site-dp/library-js-ext/angular.js'></script>
-	<script type='text/javascript' src='file:///C:/wamp64/www/site-dp/library-js-ext/angular-ui-router.js'></script>
-	<link rel='icon' type='image/x-icon' href='file:///C:/wamp64/www/site-dp/data/nounours-perso.svg'/>
-	<link rel='stylesheet' type='text/css' href='file:///C:/wamp64/www/site-dp/library-css/structure.css'/>
-	<link rel='stylesheet' type='text/css' href='file:///C:/wamp64/www/site-dp/library-css/perso.css' media='screen'/>
-	<link rel='stylesheet' type='text/css' href='file:///C:/wamp64/www/site-dp/library-css/shapes.css'/>
 	-->
-	<script type='text/javascript' src='../../site-perso/library-js-ext/angular.js'></script>
-	<script type='text/javascript' src='../../site-perso/library-js-ext/angular-ui-router.js'></script>
-	<link rel='icon' type='image/x-icon' href='../../site-perso/data/nounours-perso.svg'/>
-	<link rel='stylesheet' type='text/css' href='../../site-perso/library-css/structure.css'/>
-	<link rel='stylesheet' type='text/css' href='../../site-perso/library-css/perso.css' media='screen'/>
-	<link rel='stylesheet' type='text/css' href='../../site-perso/library-css/shapes.css'/>
+	<link rel='icon' type='image/x-icon' href='s/data/nounours-perso.svg'/>
+	<link rel='stylesheet' type='text/css' href='s/library-css/structure.css'/>
+	<link rel='stylesheet' type='text/css' href='s/library-css/perso.css' media='screen'/>
+	<link rel='stylesheet' type='text/css' href='s/library-css/shapes.css'/>
 	<link rel='stylesheet' type='text/css' href='base.css'/>
+	<script type='text/javascript' src='file:///C:/Users/debor/html/exemples/setUrl.js'></script>
+	<script type='text/javascript' src='library-js-ext/angular.js'></script>
+	<script type='text/javascript' src='library-js-ext/angular-ui-router.js'></script>
 </head><body ng-app='cssApp'>
 	<header>
 		<h1>page de référence pour démontrer des styles css basiques</h1>
@@ -47,5 +42,5 @@
 		<a href='#summary'>revenir au sommaire</a>
 	</footer>
 </body>
-	<script type='text/javascript' src='action.js'></script>
+	<script type='module' src='action.js'></script>
 </html>
