--- a/bases/base formulaire js.html
+++ b/bases/base formulaire js.html
@@ -3,7 +3,11 @@
 	<meta name='viewport' content='width=device-width,initial-scale=1'/>
 	<meta charset='utf-8'/>
 	<base target='_blank'>
-	<link rel='icon' type='image/svg+xml' href='exemples/nounours-perso.svg'>
+	<link rel='icon' type='image/svg+xml' href='../../site-dp/data/nounours-perso.svg'/>
+	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/structure.css'/>
+	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/perso.css' media='screen'/>
+	<link rel='stylesheet' type='text/css' href='.css'/>
+	<style type='text/css'></style>
 <style type='text/css'>
 	input { display: block; }
 	* {
