--- a/model-css/index.html
+++ b/model-css/index.html
@@ -2,18 +2,14 @@
 	<title>notes de css</title>
 	<meta name='viewport' content='width=device-width,initial-scale=1'/>
 	<meta charset='utf-8'/>
-	<!--
-	<base target='blank' href='../../site-perso/'/>
-	<base target='blank' href='file:///C:/wamp64/www/site-dp/'/>
-	-->
-	<link rel='icon' type='image/x-icon' href='s/data/nounours-perso.svg'/>
-	<link rel='stylesheet' type='text/css' href='s/library-css/structure.css'/>
-	<link rel='stylesheet' type='text/css' href='s/library-css/perso.css' media='screen'/>
-	<link rel='stylesheet' type='text/css' href='s/library-css/shapes.css'/>
+	<!-- base target='blank' href='../../site-dp/'/ -->
+	<link rel='icon' type='image/x-icon' href='../../site-dp/data/nounours-perso.svg'/>
+	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/structure.css'/>
+	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/perso.css' media='screen'/>
+	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/shapes.css'/>
 	<link rel='stylesheet' type='text/css' href='base.css'/>
-	<script type='text/javascript' src='file:///C:/Users/debor/html/exemples/setUrl.js'></script>
-	<script type='text/javascript' src='library-js-ext/angular.js'></script>
-	<script type='text/javascript' src='library-js-ext/angular-ui-router.js'></script>
+	<script type='text/javascript' src='../../site-dp/library-js-ext/angular.js'></script>
+	<script type='text/javascript' src='../../site-dp/library-js-ext/angular-ui-router.js'></script>
 </head><body ng-app='cssApp'>
 	<header>
 		<h1>page de référence pour démontrer des styles css basiques</h1>
