--- a/bases/base html.html
+++ b/bases/base html.html
@@ -2,16 +2,14 @@
 	<title></title>
 	<meta name='viewport' content='width=device-width,initial-scale=1'/>
 	<meta charset='utf-8'/>
-	<base target='blank' href='file:///C:/wamp64/www/site-dp/'>
-	<!-- base target='blank' href='../../site-perso/' -->
-	<link rel='icon' type='image/svg+xml' href='exemples/nounours-perso.svg'>
-	<!-- link rel='icon' type='image/svg+xml' href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' version='1.1' width='16' height='16'><circle cx='8' cy='8' r='6' style='fill:#FBD;stroke:#C36'/></svg>" -->
-	<link rel='stylesheet' type='text/css' href='library-css/structure.css'/>
-	<link rel='stylesheet' type='text/css' href='library-css/perso.css' media='screen'/>
-	<link rel='stylesheet' type='text/css' href='library-css/debbyPlay.css'/>
-	<script type='text/javascript' src='library-js/text.js'></script>
-	<script type='text/javascript' src='library-js/file.js'></script>
-	<script type='text/javascript' src='library-js/debbyPlay.js'></script>
+	<!--
+	<base target='blank' href='../../site-dp/'/>
+	<link rel='icon' type='image/x-icon' href='../../site-dp/data/nounours-perso.svg'/>
+	<link rel='icon' type='image/svg+xml' href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' version='1.1' width='16' height='16'><circle cx='8' cy='8' r='6' style='fill:#FBD;stroke:#C36'/></svg>">
+	-->
+	<link rel='icon' type='image/svg+xml' href='../../site-dp/data/nounours-perso.svg'/>
+	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/structure.css'/>
+	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/perso.css' media='screen'/>
 	<link rel='stylesheet' type='text/css' href='.css'/>
 	<style type='text/css'></style>
 </head><body>
