--- a/model-css/page-list.html
+++ b/model-css/page-list.html
@@ -1,5 +1,8 @@
 <style type='text/css'>
-	ul { border: dashed 2px var(--input-bg); }
+	ul {
+		border: solid 2px var(--bord-color);
+		padding-left: 1em;
+	}
 </style><section class='list3'>
 	<h2>les listes</h2>
 	<ul><li>display: list-item; list-style-type: disc;</li><li>valeur par défaut.</li></ul>
