--- a/model-css/index.html
+++ b/model-css/index.html
@@ -38,5 +38,5 @@
 		<a href='#summary'>revenir au sommaire</a>
 	</footer>
 </body>
-	<script type='module' src='action.js'></script>
+	<script type='text/javascript' src='action.js'></script>
 </html>
