--- a/bases/base xhtml.xhtml
+++ b/bases/base xhtml.xhtml
@@ -4,8 +4,11 @@
 	<title></title>
 	<meta name='viewport' content='width=device-width,initial-scale=1'/>
 	<meta charset='utf-8'/>
-	<base target='_blank'/>
+	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/structure.css'/>
+	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/perso.css' media='screen'/>
 	<link rel='stylesheet' type='text/css' href='../liseuse.css'/>
+	<link rel='stylesheet' type='text/css' href='.css'/>
+	<style type='text/css'></style>
 <style type='text/css'></style></head><body>
 	<h1>afficher les images dans les documents de ma liseuse</h1>
 	<p>les images en bmp ne sont pas affichées</p>
