--- a/test.xhtml
+++ b/test.xhtml
@@ -14,38 +14,41 @@
 		flex-direction: column;
 		align-items: center;
 		justify-content: space-around;
+		margin: 0 0.2em;
+		vertical-align: middle;
 	}
 	f >*:last-child {
 		border-top-style: solid;
 		border-top-width: 0.1em;
 	}
-	r-va {
+	r {
+		display: inline-block;
+		transform: skew(-15deg);
+		transform-origin: bottom left;
+		padding-left: 0.1em;
+		margin-left: 0.7em;
+		margin-right: 0.2em;
+		border-width: 0.1em;
 		border-top-style: solid;
 		border-left-style: solid;
-		transform: rotateY(270deg);
-	}
-	r-vb {
-		display: inline-block;
-		padding-left: 1em;
-		padding-top: 0.2em;
-		background:
-			linear-gradient(10deg, transparent 85%, blue 85%),
-			linear-gradient(75deg, transparent 15%, blue 15%, blue 25%, transparent 25%),
-			linear-gradient(105deg, transparent 30%, blue 30%, blue 40%, transparent 40%);
-	}
-	r {
-		border-top-style: solid;
 	}
 	r:before {
-		content: '\\/';
+		content: "";
+		position: absolute;
+		height: 60%;
+		width: 0.5em;
+		left: -0.5em;
+		bottom: 0;
+		border-width: 0.1em;
+		border-right-style: solid;
+		border-top-style: inherit;
+		transform: skew(30deg);
+		transform-origin: bottom right;
 	}
 </style></head><body>
 	<h1>afficher les images dans les documents de ma liseuse</h1>
 	<p>les images en bmp ne sont pas affichées</p>
 	<p>les styles css externes sont pris en compte</p>
 	<p>fermer toutes les balises, comme img, base</p>
-	<f>coucou</f>
-	<d>coucou</d>
-	<n>coucou</n>
-	<p>voici une fraction <f><d>a</d><n>b+ 12 +c</n></f> stylisée. et une racine <r>5</r> ici.</p>
+	<p>voici une fraction <f><d>a</d><n>b+ 12 +c</n></f> stylisée. et une racine <r>5lf;ùfzfv + 54</r> ici.</p>
 </body></html>
