--- a/exemples/cube.html
+++ b/exemples/cube.html
@@ -38,7 +38,7 @@
 			<div>devant</div><div>derrière</div><div>haut</div>
 			<div>bas</div><div>gauche</div><div>droite</div>
 		</div>
-		<div class='ball text'>coucou</div>
+		<div class='ball text horizontal'>coucou</div>
 	</div>
 	<p>coucou</p>
 </body></html>
