--- a/web-extension/we-marque-page/liens-perso.html
+++ b/web-extension/we-marque-page/liens-perso.html
@@ -25,7 +25,7 @@
 	a:hover { font-weight: normal; }
 	td:first-letter { text-transform: none; }
 </style></head><body>
-	<selection callback='chooseOption'>optionList</selection>
+	<selection name='optionChoosen' onchange='chooseOption()'>optionList</selection>
 	<table>
 		<tr><th>site</th><th>utilisateur</th><th>courriel</th><th>mot de passe</th><th>infos</th></tr>
 		<tr for='dataList'>
@@ -36,11 +36,10 @@
 <script type='text/javascript'>
 	// var fileJson = '../html/divers/links-perso.json';
 	var fileJson = '/var/www/html/html/web-extension/we-marque-page/links-perso.json';
-
-	document.body.init();
 	debbyPlay.optionList =[];
 	debbyPlay.dataList =[];
 	debbyPlay.jsonList ={};
+	debbyPlay.optionChoosen ="";
 
 	const linkRef ={
 		"name": "",
@@ -50,11 +49,11 @@
 		"password": "",
 		"infos": ""
 	};
-	function chooseOption (option){
+	function chooseOption(){
+		console.log ('coucou', debbyPlay.optionChoosen);
 		debbyPlay.dataList =[];
-		debbyPlay.dataList = debbyPlay.jsonList [option];
+		debbyPlay.dataList = debbyPlay.jsonList [debbyPlay.optionChoosen];
 		document.body.load();
-		showSelectionTitle (document.getElementsByTagName('selection')[0], option);
 	}
 	// récupérer les données
 	debbyPlay.jsonList = useJson (fileJson);
@@ -69,5 +68,6 @@
 	var pos = debbyPlay.optionList.indexOf ('important');
 	debbyPlay.optionList.splice (pos, 1);
 	debbyPlay.optionList.unshift ('important');
+	document.body.init();
 	chooseOption ('important');
 </script></html>
