--- a/web-extension/liens-perso.html
+++ b/web-extension/liens-perso.html
@@ -32,8 +32,11 @@
 	</table>
 </body>
 <script type='text/javascript'>
-//	var fileJson = '/var/www/html/html/web-extension/we-marque-page/links-perso.json';
+	/*
+	var fileJson = '/var/www/html/html/web-extension/we-marque-page/links-perso.json';
 	var fileJson = 'C:\\Users\\deborah.powers\\html\\web-extension\\links-perso.json';
+	*/
+	var fileJson = '/var/www/html/html/web-extension/links-perso.json';
 	debbyPlay.optionList =[];
 	debbyPlay.dataList =[];
 	debbyPlay.jsonList ={};
