--- a/web-extension/liens-perso.html
+++ b/web-extension/liens-perso.html
@@ -34,9 +34,10 @@
 <script type='text/javascript'>
 	/*
 	var fileJson = '/var/www/html/html/web-extension/we-marque-page/links-perso.json';
+	var fileJson = '/var/www/html/html/web-extension/links-perso.json';
 	var fileJson = 'C:\\Users\\deborah.powers\\html\\web-extension\\links-perso.json';
 	*/
-	var fileJson = '/var/www/html/html/web-extension/links-perso.json';
+	var fileJson = 'links-perso.json';
 	debbyPlay.optionList =[];
 	debbyPlay.dataList =[];
 	debbyPlay.jsonList ={};
