--- a/exemples/cube.html
+++ b/exemples/cube.html
@@ -69,34 +69,41 @@
 	top: 100px;
 	left: 400px;
 	width: 200px;
-	height: 200px;
+	height: 100px;
 }
 .toblerone >* {
 	background-color: #F0F4;
-	width: 200px;
-	height: 100px;
+	width: inherit;
+	height: inherit;
 }
 .toblerone > *:nth-child(1) {
-	height: 112px;
+	height: 141.42px;
 	transform: translateZ(50px) rotateX(45deg);
 }
 .toblerone > *:nth-child(2) {
-	height: 112px;
+	height: 141.42px;
 	transform: translateZ(-50px) rotateY(180deg) rotateX(45deg);
 }
 .toblerone > *:nth-child(3) {
-	transform: rotateX(90deg) translateY(50px);
+	height: 200px;
+	transform: rotateX(-90deg) translateZ(-50px) translateY(100px);
 	transform-origin: bottom center;
 }
 .toblerone > *:nth-child(4) {
-	width: 100px;
-	transform: rotateY(270deg) translateX(-50px) translateZ(50px);
+	transform: rotateY(270deg) translateX(-100px);
 	transform-origin: center left;
+	clip-path: polygon(100% 100%, 50% 0, 0 100%);
 }
 .toblerone > *:nth-child(5) {
-	width: 100px;
-	transform: rotateY(-270deg) translateX(50px) translateZ(50px);
+	transform: rotateY(-270deg) translateX(100px);
 	transform-origin: center right;
+	clip-path: polygon(100% 100%, 50% 0, 0 100%);
+}
+p.test {
+	background-color: #F0F;
+	width: 100%;
+	height: 100%;
+	clip-path: polygon(0 100%, 50% 0, 100% 100%);
 }
 </style></head><body>
 	<a href='https://la-cascade.io/creer-un-cube-en-css/'>source du cube: la cascade</a>
@@ -112,5 +119,5 @@
 		</div>
 		<div class='ball text'>coucou</div>
 	</div>
-	<p>coucou</p>
+	<p class='test'>coucou</p>
 </body></html>
