--- a/exemples/cube v1.html
+++ b/exemples/cube v1.html
@@ -15,6 +15,8 @@
 	div.cube {
 		top: 100px;
 		left: 400px;
+		width: 300px;
+		height: 200px;
 	}
 	div.cube > div {
 		background-color: transparent;
@@ -62,42 +64,7 @@
 	transform: rotateY(-270deg) translateX(50px) translateZ(50px);
 	transform-origin: center right;
 }
-/* le toblerone
-.toblerone {
-	top: 100px;
-	left: 400px;
-	width: var(--cube-size);
-	height: calc(0.5* var(--cube-size));
-}
-.toblerone >* {
-	background-color: #F0F4;
-	width: inherit;
-	height: inherit;
-}
-.toblerone > *:nth-child(1) {
-	height: 141.42%;
-	transform: translateZ(50px) rotateX(45deg);
-}
-.toblerone > *:nth-child(2) {
-	height: 141.42%;
-	transform: translateZ(calc(-0.25 *var(--cube-size))) rotateY(180deg) rotateX(45deg);
-}
-.toblerone > *:nth-child(3) {
-	height: var(--cube-size);
-	transform: rotateX(-90deg) translateZ(calc(-0.25 *var(--cube-size))) translateY(50%);
-	transform-origin: bottom center;
-}
-.toblerone > *:nth-child(4) {
-	transform: rotateY(270deg) translateX(-50%);
-	transform-origin: center left;
-	clip-path: polygon(100% 100%, 50% 0, 0 100%);
-}
-.toblerone > *:nth-child(5) {
-	transform: rotateY(-270deg) translateX(50%);
-	transform-origin: center right;
-	clip-path: polygon(100% 100%, 50% 0, 0 100%);
-}
-*/
+/* le toblerone */
 .toblerone {
 	top: 100px;
 	left: 400px;
