--- a/exemples/cube.html
+++ b/exemples/cube.html
@@ -13,16 +13,68 @@
 		perspective: 1200px;
 		perspective-origin: 50% 50%;
 	}
-.cylindre {
-	background-color: #F6D4;
+.volume >p { background-color: #F6D4; }
+.marshmallow {
+	width: var(--long-x); height: var(--long-y);
+	--arrondi: 10%;
 }
+.marshmallow >* {
+	width: var(--long-x); height: var(--long-y);
+	transform-style: preserve-3d;
+	transform-origin: center center;
+}
+.marshmallow > *:nth-child(1) {
+	width: var(--long-x); height: var(--long-x);
+	transform-origin: top center;
+	transform: rotateX(-90deg) translateY(-50%);
+	border-radius: var(--arrondi);
+}
+.marshmallow > *:nth-child(2) {
+	width: var(--long-x); height: var(--long-x);
+	transform-origin: bottom center;
+	transform: rotateX(90deg) translateY(50%) translateZ(calc(var(--long-x) - var(--long-y)));
+	border-radius: var(--arrondi);
+}
+.marshmallow > *:nth-child(3) {
+	width: calc(100% - 2* var(--arrondi));
+	transform: translateX(calc(100 / calc(100% - 2* var(--arrondi)))) translateZ(calc(var(--long-x) /2));
+	background-color: green;
+}
+.marshmallow > *:nth-child(4) {
+	width: calc(100% - 2* var(--arrondi));
+	transform: translateX(12.5%) rotateY(90deg) translateZ(calc(var(--long-x) /2));
+}
+.marshmallow > *:nth-child(5) { transform: translateX(450%) rotateY(45deg) translateZ(calc(var(--long-x) /2)); }
+.marshmallow > *:nth-child(6) { transform: translateX(450%) rotateY(135deg) translateZ(calc(var(--long-x) /2)); }
+.marshmallow > *:nth-child(7) { transform: translateX(450%) rotateY(22.5deg) translateZ(calc(var(--long-x) /2)); }
+.marshmallow > *:nth-child(8) { transform: translateX(450%) rotateY(112.5deg) translateZ(calc(var(--long-x) /2)); }
+.marshmallow > *:nth-child(9) { transform: translateX(450%) rotateY(67.5deg) translateZ(calc(var(--long-x) /2)); }
+.marshmallow > *:nth-child(10) { transform: translateX(450%) rotateY(157.5deg) translateZ(calc(var(--long-x) /2)); }
+.marshmallow > *:nth-child(11) { transform: translateX(450%) rotateY(11.25deg) translateZ(calc(var(--long-x) /2)); }
+.marshmallow > *:nth-child(12) { transform: translateX(450%) rotateY(101.25deg) translateZ(calc(var(--long-x) /2)); }
+.marshmallow > *:nth-child(13) { transform: translateX(450%) rotateY(56.25deg) translateZ(calc(var(--long-x) /2)); }
+.marshmallow > *:nth-child(14) { transform: translateX(450%) rotateY(146.25deg) translateZ(calc(var(--long-x) /2)); }
+.marshmallow > *:nth-child(15) { transform: translateX(450%) rotateY(33.75deg) translateZ(calc(var(--long-x) /2)); }
+.marshmallow > *:nth-child(16) { transform: translateX(450%) rotateY(123.75deg) translateZ(calc(var(--long-x) /2)); }
+.marshmallow > *:nth-child(17) { transform: translateX(450%) rotateY(78.75deg) translateZ(calc(var(--long-x) /2)); }
+.marshmallow > *:nth-child(18) { transform: translateX(450%) rotateY(168.75deg) translateZ(calc(var(--long-x) /2)); }
+.marshmallow >*:after {
+	content: "";
+	width: 100%;
+	height: inherit;
+	transform: translateZ(calc(-1* var(--long-x)));
+	background-color: inherit;
+	background-image: inherit;
+}
+.marshmallow >*:nth-child(1):after, .marshmallow >*:nth-child(2):after { display: none; }
+
 </style></head><body>
 	<a href='https://la-cascade.io/creer-un-cube-en-css/'>source du cube: la cascade</a>
 	<a href='https://cssanimation.rocks/fr/spheres/'>source de la boule: cssanimation</a>
 	<a href='https://www.w3docs.com/snippets/css/how-to-calculate-the-width-of-an-element-with-the-css-calc-function.html'>calcul</a>
 	<div class='perspective'>
-		<div class='volume cylindre full'>
+		<div class='volume marshmallow full'>
 			<p>haut</p><p>bas</p>
-			<p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p>
+			<p></p><p></p>
 		</div>
 </body></html>
