--- a/web-extension/liens-perso.html
+++ b/web-extension/liens-perso.html
@@ -1,7 +1,8 @@
-<!doctype html><html><head>
+<!DOCTYPE html><html><head>
 	<title>Liens personnels</title>
 	<meta name='viewport' content='width=device-width,initial-scale=1'/>
 	<meta charset='utf-8'/>
+	<base target='blank'>
 	<link rel='icon' type='image/x-icon' href='../../site-dp/data/nounours-perso.svg'/>
 	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/structure.css'/>
 	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/debbyPlay.css'/>
